<resources>
    //App name
    <string name="app_name" translatable="false">Mentall</string>

    //User input
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="settings_password_change_hint">Enter new password</string>
    <string name="settings_password_change_hint2">Enter password again</string>

    //Buttons
    <string name="login_register_button">Login / Register</string>
    <string name="stats_button">Statistics</string>
    <string name="start_button">How do you feel?</string>
    <string name="register_button">Register</string>
    <string name="not_logged_in">You need to log in to use the app</string>
    <string name="save_button">Save</string>
    <string name="login_button">Login</string>
    <string name="mainmenu_button">Main Menu</string>
    <string name="resetPassword">Reset</string>
    <string name="switch1">switch</string>

    //Questions
    <string name="question1">Do you feel sad or unhappy? \n(1= very unhappy, 5=happy)</string>
    <string name="question2">Are you reluctant or unsatisfied? \n(1=reluctant/unsatisfied, 5=satisfied)</string>
    <string name="question3">Do you feel more tired than usual? \n(1=very tired, 5=not tired that usual)</string>
    <string name="question4">Do you feel like you get enough sleep? \n(1=not enough, 5=plenty enough)</string>
    <string name="question5">Do you feel guilt? \n(1=constant guilt, 5=no guilt)</string>
    <string name="question6">Do you feel like you have failed as a person? \n(1=I have failed, 5=no, I feel fine)</string>
    <string name="question7">Do you get tired easier that usual? \n(1=yes, I wake up tired, 5=no, I feel fine)</string>
    <string name="question8">Are you as functional as you used to be? \n(1=I cannot function at all, 5=I feel fine)</string>
    <string name="question9">Are you feeling indecisive?(Take your time to REALLY ponder this one) \n(1=yes, I cannot decide anything, 5=no)</string>
    <string name="question10">Are you unable to concentrate like you used to? \n(1=yes, I cannot concentrate, 5=no)</string>
    <string name="question11">Has there been changes to your appetite? \n(1=yes a lot, 5=no changes)</string>
    <string name="question12">Do you pay attention to your own health? \n(1=No, I don\'t care anymore, 5=As much as before)</string>
    <string name="question13">Are you less interested in sexual activities? \n(1=yes, no interest, 5=no problems)</string>
    <string name="question14">Do you feel like you have enough meaningful relationships? \n(1=I feel that I am alone, 5=I do) </string>
    <string name="question15">Have you been paying attention to your diet? \n(1=I don not care, 5=yes, I eat healthy)</string>
    <string name="question16">Do you feel generally healthy? \n(1=no, 5=yes)</string>
    <string name="question17">Have you had more headaches than usual? \n(1=yes, 5=no)</string>
    <string name="question18">Do you feel ugly/unattractive? \n(1=yes, 5=no)</string>
    <string name="question19">Have you cried more than usual? \n(1=cannot cry anymore, 5=no)</string>
    <string name="question20">Do you wish to harm yourself? \n(1=yes, 5=no)</string>

    //Radiobutton numbers
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>

    //Group results
    <string name="group1head">Deep feelings</string>
    <string name="group2head">How you felt</string>
    <string name="group3head">Physical attributes</string>
    <string name="group4head">Human relations</string>
    <string name="group5head">Median</string>
    <string name="group1text" translatable="false"></string>
    <string name="group2text" translatable="false"></string>
    <string name="group3text" translatable="false"></string>
    <string name="group4text" translatable="false"></string>
    <string name="group5text" translatable="false"></string>

    //Group feedback
    <string name="group1critical">Mental state critical, please go to the closest emergency room and get some help. For first aid you can call Finnish mental health service 0925250113</string>
    <string name="group1alarm">Your mental state seems to be worryingly low. Professional help could be in order. In need for someone to talk with, you can call Finnish mental health service 0925250113</string>
    <string name="group1good">Looking good! Still you should keep your mental health in mind as it seems like you potentially have a mild depression.</string>
    <string name="group1excellent">Your mental state seems brilliant! :)</string>
    <string name="group2critical">Your results are truly alarming. I recommend that you contact your local health care or call the Finnish mental health service: 0925250113</string>
    <string name="group2alarm">It seems that your mental state is tipping to the dark side (of the force). You should talk to someone about your mental state. You can always contact the Finnish mental health service: 0925250113 (Unlimited powah is nice but wrinkly face, not so much!)</string>
    <string name="group2midway">Slightly unbalanced mental state, but nothing too alarming. You should ponder the possibility of talking to a therapist.</string>
    <string name="group2good">Seems good. You should, however, study your feelings to prevent a downward spiral</string>
    <string name="group2excellent">All seems good with your feelings! :)</string>
    <string name="group3critical">Really worrying. You should take care of your physical well being also. I recommend you contact your local health care or call the Finnish mental health service: 0925250113</string>
    <string name="group3alarm">Alarming mental state. I recommend consulting a professional about your mental health. You also can contact Finnish mental health service: 0925250113</string>
    <string name="group3midway">Balanced mental state is good, but unfortunately this is not it. I recommend that you contact a professional therapist.</string>
    <string name="group3good">Seems alright! Don\'t forget to keep taking care of your mental health however, you are definitely worth it!</string>
    <string name="group3excellent">All good! Keep it up you happy chap! :)</string>
    <string name="group4critical">Seems worrying, you should talk with someone about your problems. You can contact Finnish mental health service 0925250113</string>
    <string name="group4midway"> There might be some cause for concern. Try to talk with someone.</string>
    <string name="group4excellent">Awesome! It seems like you are doing well! :)</string>
    <string name="group5critical">Your situation seems critical. Please go to the ER or call the Finnish mental health service 0925250113. You are worth it.</string>
    <string name="group5alarm">Looks alarming,not good. Get some professional help or call the Finnish mental health service 0925250113</string>
    <string name="group5midway">Not good, not bad. You should try and talk with someone.</string>
    <string name="group5good">Looking good! Not the best possible situation, but keep it up and you will get there!</string>
    <string name="group5excellent">Awesome! You are in good mental health! :)</string>
    <string name="group_feedback_exception">You did not answer any questions.</string>

    //Settings
    <string name="settings_language">Language</string>
    <string name="settings_user">User options</string>
    <string name="settings_change_password_text">Change your password</string>


    //Statistics
    <string name="statisticsWeek">Overall average</string>
    <string name="statisticsDay">Latest answers</string>
    <string name="pieChartTitle">Average moods</string>

    //Active user
    <string name="active_user_main">Hello, friend! Please log in or register an account.</string>
    <string name="active_user_active">Welcome</string>

    //Error messages
    <string name="settings_password_change_error">Both passwords need to match</string>
    <string name="invalid_login">Invalid username or password</string>
    <string name="login_error_empty_data">Username and password can\'t be empty or contain spaces.</string>
    <string name="settings_new_password_error">New password can\'t be blank or contain spaces</string>

</resources>

