<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultsActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="414dp"
        android:layout_height="736dp"
        android:background="@drawable/meditation-1384758_640"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="71dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/group1Head"
                android:layout_width="wrap_content"
                android:layout_height="39dp"
                android:layout_marginStart="110dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="110dp"
                android:text="@string/group1head"
                android:textAlignment="center"
                android:textColor="#0A0A0A"
                android:textColorHighlight="#FFFFFF"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/group1Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="143dp"
                android:layout_marginLeft="143dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="143dp"
                android:layout_marginRight="143dp"
                android:text="@string/group1text"
                android:textAlignment="center"
                android:textColor="#0A0A0A"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/group1Head" />

            <TextView
                android:id="@+id/group2Head"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_marginStart="110dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="110dp"
                android:text="@string/group2head"
                android:textAlignment="center"
                android:textColor="#0A0A0A"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/group1Text" />

            <TextView
                android:id="@+id/group2Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="143dp"
                android:layout_marginLeft="143dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="143dp"
                android:layout_marginRight="143dp"
                android:text="@string/group2text"
                android:textAlignment="center"
                android:textColor="#0A0A0A"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/group2Head" />

            <TextView
                android:id="@+id/group3Head"
                android:layout_width="wrap_content"
                android:layout_height="31dp"
                android:layout_marginStart="110dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="110dp"
                android:text="@string/group3head"
                android:textAlignment="center"
                android:textColor="#0A0A0A"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/group2Text" />

            <TextView
                android:id="@+id/group3Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="143dp"
                android:layout_marginLeft="143dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="143dp"
                android:layout_marginRight="143dp"
                android:text="@string/group3text"
                android:textAlignment="center"
                android:textColor="#0A0A0A"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/group3Head" />

            <TextView
                android:id="@+id/group4Head"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginStart="110dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="110dp"
                android:text="@string/group4head"
                android:textAlignment="center"
                android:textColor="#0A0A0A"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/group3Text" />

            <TextView
                android:id="@+id/group4Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="143dp"
                android:layout_marginLeft="143dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="143dp"
                android:layout_marginRight="143dp"
                android:text="@string/group4text"
                android:textAlignment="center"
                android:textColor="#0A0A0A"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/group4Head" />

            <TextView
                android:id="@+id/group5Head"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginStart="110dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="110dp"
                android:text="@string/group5head"
                android:textAlignment="center"
                android:textColor="#0A0A0A"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/group4Text" />

            <TextView
                android:id="@+id/group5Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="143dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="143dp"
                android:layout_marginBottom="32dp"
                android:text="@string/group5text"
                android:textAlignment="center"
                android:textColor="#0A0A0A"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/statisticsButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/group5Head" />

            <Button
                android:id="@+id/mainMenuButton"
                android:layout_width="121dp"
                android:layout_height="39dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:onClick="onClick"
                android:text="@string/mainmenu_button"
                app:layout_constraintBaseline_toBaselineOf="@+id/statisticsButton"
                app:layout_constraintEnd_toStartOf="@+id/statisticsButton"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/statisticsButton"
                android:layout_width="103dp"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="64dp"
                android:onClick="onClick"
                android:text="@string/stats_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/mainMenuButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>